[package]
name = "pih-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
chrono = { version = "0.4.35", features = ["serde", "rustc-serialize"] }
clap = { version = "4.5.1", features = ["derive", "env"] }
csv = "1.3.0"
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = "0.12.1"
parquet = "50.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.1", features = ["catch-panic", "compression-full", "sensitive-headers", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["serde"] }
