[package]
name = "pih-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
chrono = { version = "0.4.37", features = ["serde", "rustc-serialize"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
csv = "1.3.0"
dotenvy = "0.15.7"
futures = "0.3.30"
itertools = "0.13.0"
parquet = "52.2.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["catch-panic", "compression-full", "sensitive-headers", "timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde"] }
